<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="thall59.assignment6.Coffee">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backgroundImage"
        android:scaleType="centerCrop"
        android:src="@drawable/java_fantasy"
        android:focusable="true"
        android:focusableInTouchMode="true"/>


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="thall59.assignment6.Coffee">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:weightSum="1"
                    android:scrollIndicators="right"
                    android:id="@+id/linearLayout"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">

                     <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/title"
                        android:id="@+id/coffee_title_textview"
                        android:layout_alignTop="@+id/textView2"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:background="#b28ec5"
                        android:textSize="25dp"
                        android:textColor="#cae8a7"
                        android:padding="8dp" />

                     <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/subtitle"
                        android:id="@+id/textView7"
                        android:gravity="center"
                         android:textColor="#000000" />

                     <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/name_editText"
                        android:id="@+id/name_editText"
                        android:layout_below="@+id/textView"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@+id/textView"
                        android:layout_alignEnd="@+id/textView"
                        android:layout_margin="8dp"
                        android:padding="8dp"
                        android:editable="true"
                        android:textColor="#000000" />

                     <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whipped_cream_checkBox"
                        android:id="@+id/whipped_cream_checkBox"
                        android:paddingLeft="24dp"
                        android:textSize="16sp"
                         android:onClick="addWhippedCream"/>

                     <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chocolate_checkBox"
                        android:id="@+id/chocolate_checkBox"
                        android:paddingLeft="24dp"
                        android:textSize="16sp"
                         android:onClick="addChocolate"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity_textView"
                        android:id="@+id/quantity_textView"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.20">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/decrement_button"
                            android:id="@+id/decrement_button"
                            android:background="#a4a3a0"
                            android:layout_weight="1"
                            android:onClick="decrement" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/show_quantity_textView"
                            android:id="@+id/show_quantity_textView"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:layout_weight="1"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/increment_button"
                            android:id="@+id/increment_button"
                            android:background="#a4a3a0"
                            android:layout_weight="1"
                            android:onClick="increment" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price_textView"
                        android:id="@+id/price_textView"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="38dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/show_price_textView"
                            android:id="@+id/show_price_textView"
                            android:textAlignment="center"
                            android:gravity="center" />

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/order_button"
                        android:id="@+id/order_button"
                        android:layout_gravity="center_horizontal"
                        android:background="#a4a3a0"
                        android:onClick="displayOrderSummary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textAlignment="center"
                        android:textSize="16dp"
                        android:textColor="@android:color/black"
                        android:text="\n"
                        android:id="@+id/order_summary"
                        android:gravity="center"
                        android:layout_gravity="center"/>


                </LinearLayout>

             </RelativeLayout>

    </ScrollView>

</RelativeLayout>


